--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -9,7 +9,7 @@ $default-white: rgb(255, 255, 255);
 *{
     box-sizing: border-box;
     text-decoration: none;
-    font-family: ; 'Work Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     outline: none;
     padding: 0;
     margin: 0;
