--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -6,29 +6,29 @@ $default-grey-text: rgb(204, 204, 204);
 $default-black: rgb(0, 0, 0);
 $default-white: rgb(255, 255, 255);
 
-*{
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: ; 'Work Sans', sans-serif;
-    outline: none;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background-color: $default-white;
-  }
-  @mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  @mixin flex-spaceBetween-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  @mixin flex-spaceBetween-center {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Work Sans", sans-serif;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background-color: $default-white;
+}
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@mixin flex-spaceBetween-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+@mixin flex-spaceBetween-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
