--- a/src/Pages/Components/Nav/Nav.scss
+++ b/src/Pages/Components/Nav/Nav.scss
@@ -6,37 +6,81 @@
   height: 6.94vw;
   position: fixed;
   top: 0;
+  z-index: 2;
   padding: 0 5vw;
-  img {
-    width: 10vw;
-  }
-
-  .NavCenter {
-    font-weight: bold;
-    font-size: 1.11vw;
-    line-height: 2.01vw;
-    display: flex;
-    p {
-      padding-right: 5px;
+  svg {
+    width: 11vw;
+    g {
+      fill: $default-black;
     }
   }
-
+  .NavCenter {
+    display: flex;
+    font-size: 1.2vw;
+    line-height: 2.01vw;
+    span {
+      display: inline-block;
+      padding: 0 9px;
+      position: relative;
+      font-weight: bold;
+      z-index: 1;
+      &:hover {
+        color: $default-yellow;
+        cursor: pointer;
+        &::after {
+          width: 100%;
+        }
+      }
+      &::after {
+        background-color: $default-black;
+        display: block;
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: 0.3s ease;
+      }
+    }
+  }
   .NavRight {
     font-weight: bold;
-    font-size: 0.83vw;
+    font-size: 0.9vw;
     line-height: 2.32vw;
     font-weight: bold;
     display: flex;
     p {
-      padding: 0 0.2vw;
+      padding: 0 0.5vw;
+      cursor: pointer;
+    }
+    .ulOn {
+      border: 1px solid black;
+      display: block;
+    }
+    .ulOff {
+      border: 1px solid black;
+      display: none;
     }
     div {
-      width: 2.5vw;
-      height: 2.5vw;
-      border: 2px solid $default-black;
-      border-radius: 50%;
-      background: $default-black;
-      margin: 0 3px;
+      position: relative;
+      .circle {
+        width: 2.3vw;
+        height: 2.3vw;
+        border-radius: 50%;
+        background: $default-black;
+        margin: 0 3px;
+      }
+      svg {
+        width: 0.8vw;
+        height: 0.8vw;
+        position: absolute;
+        top: 30%;
+        left: 35%;
+        background-color: transparent;
+        fill: white;
+      }
     }
   }
 }
