[13기 김보현] Add: 로그인/회원가입 메뉴탭 기능 완료

--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -1,6 +1,7 @@
 $default-yellow: rgb(255, 232, 0);
 $default-blue: rgb(9, 127, 255);
 $default-green: rgb(38, 218, 79);
+$default-red: rgb(196, 41, 60);
 $default-grey-background: rgb(247, 247, 247);
 $default-grey-text: rgb(204, 204, 204);
 $default-black: rgb(0, 0, 0);
