Add: Section1 LeftSlider의 이미지를 감싸는 div 태그 추가 - ProductDetails Section1의 LeftSlider, RightSlider의 레이아웃 초기 작업완료 - LeftSlider와 RightSlider의 Scrolling을 조절할 예정 - RightSlider는 Pagination을 통해 구현할 지, 아니면 state, props를 사용해서 부모, 자식 컴포넌트 개념으로 구현할 지 고민 중

--- a/src/Pages/ProductDetails/ProductDetails.scss
+++ b/src/Pages/ProductDetails/ProductDetails.scss
@@ -4,15 +4,13 @@
         display: flex;
 
 
-        .LeftSlider {
+        .Leftside {
             left: 0px;
-            background-color: chartreuse;
             width: 50%;
         }
 
-        .RightSlider  {
+        .Rightside  {
             right: 0px;
-            background-color: coral;
             width: 50%;
         }
     }
