--- a/src/Pages/ProductDetails/ComponentYH/LeftSlider.scss
+++ b/src/Pages/ProductDetails/ComponentYH/LeftSlider.scss
@@ -22,14 +22,50 @@
         background-color: transparent;
         z-index: 20;
 
-        img {
-            width: 100%;
-            height: 100%;
-            padding: 25%;
-            background-color: transparent;
-            //keyframe or transition
-            
+        .Fore.Icon1 {
+            width: 50vw;
+            height: 85vw;
         }
+        
+
+        .Fore {
+            width: 50vw;
+            height: 100vh;
+            object-fit: cover;
+            background-color: transparent;
+            position: relative;
+
+            img {
+                top: -100px;
+                background-color: transparent;
+            }
+
+            img.Icon1 {
+                width: 10vw;
+                height: 10vw;
+                position: absolute;
+                top: 17vw;
+                left: 12vw;
+                transform: rotate(-17deg);
+            }
+
+            img.Product {
+                position: absolute;
+                left: 20vw;
+            }
+
+            img.Icon2 {
+                width: 20vw;
+                height: 20vw;
+                position: absolute;
+                top: -10vw;
+                left: 26vw;
+                transform: rotate(10deg);
+            }
+
+        }
+
+        
     }
 }
 
