--- a/src/Pages/Components/Nav/NavRight.scss
+++ b/src/Pages/Components/Nav/NavRight.scss
@@ -4,8 +4,19 @@
   line-height: 2.32vw;
   font-weight: bold;
   display: flex;
-  select{
+  justify-content: center;
+  align-items: center;
+  select {
     font-size: 0.9vw;
+    -webkit-appearance: none;
+    font-weight: bold;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  svg {
+    width: 0.8vw;
+    height: 0.8vw;
   }
   p {
     padding: 0 0.5vw;
