--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -1,8 +1,58 @@
 @import "../../Styles/common.scss";
-@import "./components/Section1.scss";
-@import "./components/Section2.scss";
-@import "./components/Section3.scss";
 
 .Main {
+  overflow: hidden;
+  .slick-slider {
+    ul {
+      bottom: 70px;
+      background: transparent;
+      li {
+        background: transparent;
+      }
+    }
+  }
 
+  .shop {
+    position: absolute;
+    bottom: 200px;
+    left: 43%;
+    background: transparent;
+    p {
+      background: transparent;
+      color: $default-yellow;
+      font-size: 1.5rem;
+    }
+  }
+
+  .Section2 {
+    width: 100%;
+    height: 100vh;
+    border: 1px solid black;
+    font-size: 60px;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 2%;
+  }
+
+  .Section3 {
+    display: flex;
+    img {
+      width: 50%;
+    }
+    div {
+      border: 1px solid red;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 60px;
+      font-weight: 800;
+      form{
+        input, button{
+          border-bottom: 1px solid black;
+        }
+      }
+    }
+  }
 }
