--- a/src/Pages/Components/Footer.scss
+++ b/src/Pages/Components/Footer.scss
@@ -1,28 +1,38 @@
 @import "../../Styles/common.scss";
 
-.Footer{
+.Footer {
   width: 100%;
   height: 100vh;
-  .section1, .section2, .section3{
+
+  .section1,
+  .section2,
+  .section3 {
     border: 1px solid black;
     height: 33vh;
   }
-  .section1{
+
+  .section1 {
     display: flex;
-    div{
+
+    div {
       border: 1px solid black;
       @include flex-center;
       width: 50%;
       font-weight: 800;
       font-size: 1.3rem;
-      &:hover{
+
+      &:hover {
         cursor: pointer;
       }
     }
   }
-  
-  .section2{
-    .detail{
+
+  .section2 {
+    .subscribe {
+      font-size: 1.3rem;
+    }
+
+    .detail {
       margin: 40px;
       height: 50%;
       display: flex;
@@ -30,17 +40,32 @@
       font-size: 0.6rem;
       font-weight: bold;
       padding: 5px;
-      border: 1px solid black;
-      .help{
+
+      .help {
         display: flex;
         padding: 10px;
+
+        div {
+          padding: 0 10px;
+        }
       }
     }
-    form{
-      margin:0 40px;
-      input{
-        border-bottom-width: 1;
+
+    form {
+      margin: -30px 40px;
+
+      input,
+      button {
+        border-bottom: 1px solid black;
       }
     }
+  }
+
+  .section3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10rem;
+    font-weight: 800;
   }
 }
