--- a/src/Pages/ProductList/Components/Product/Product.scss
+++ b/src/Pages/ProductList/Components/Product/Product.scss
@@ -1,4 +1,20 @@
 @import "../../../../Styles/common.scss";
+@keyframes enterMouse {
+  0% {
+    left: 460px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+@keyframes leaveMouse {
+  0% {
+    left: 0px;
+  }
+  100% {
+    left: 460px;
+  }
+}
 
 .Product {
   width: 21vw;
@@ -19,35 +35,36 @@
     height: 47vh;
     position: relative;
     left: 460px;
-    transition: left 0.3s ease-out;
+    animation: leaveMouse 2s;
     width: 100%;
     height: 100%;
     margin: 0;
     overflow: hidden;
+
     img:first-child {
       width: 120%;
       height: 120%;
       position: absolute;
       top: -20%;
       left: -10%;
-      transform: scale(1.3);
+      transform: scale(1);
       object-fit: cover;
     }
 
     .logoText {
       background-color: transparent;
       position: absolute;
-      top: 15%;
+      top: 18%;
       left: -10%;
-      width: 1000px;
-      transition: 3s ease-out;
-      background-repeat: repeat;
+      height: 300px;
+      transition: 6s ease-out;
+      animation-iteration-count: infinite;
     }
   }
 
   .logoIcon {
-    width: 75px;
-    height: 75px;
+    width: 4.5vw;
+    height: 4.5vw;
     background-color: transparent;
     position: absolute;
     top: 22%;
@@ -61,8 +78,10 @@
     width: 100px;
     height: 25vh;
     position: absolute;
+    transform: rotate(0);
+    transition: transform 0.2s ease-in;
     top: 12%;
-    left: 32%;
+    left: 33%;
   }
 
   span {
@@ -73,9 +92,11 @@
     position: absolute;
     bottom: 10px;
     margin-bottom: 100px;
+    transition: color 0.3s ease-out;
     div {
       background-color: transparent;
-      font-size: 1vw;
+      font-size: 0.9vw;
+      font-weight: 500;
       margin: 0;
     }
     div:first-child {
@@ -87,6 +108,8 @@
     left: -500px;
   }
   button {
+    font-size: 0.9vw;
+    font-weight: 600;
     width: 18vw;
     height: 8vh;
     background-color: rgb(0, 0, 0);
@@ -96,16 +119,27 @@
   }
 }
 
-.Product:hover .productThumbnail {
-  left: -10%;
-  .logoText {
-    left: -460px;
+.Product:hover {
+  .productThumbnail {
+    animation: enterMouse 0.3s ease-out;
+    animation-fill-mode: both;
+    .logoText {
+      left: -2000px;
+    }
   }
-}
 
-.Product:hover .logoIcon {
-  width: 95px;
-  height: 95px;
-  top: 9%;
-  left: 20%;
+  .logoIcon {
+    width: 6vw;
+    height: 6vw;
+    top: 9%;
+    left: 20%;
+  }
+
+  .productImg {
+    transform: rotate(12deg);
+  }
+
+  span {
+    color: $default-yellow;
+  }
 }
