Add: 테스트용 Mock data 추가 - 2020년 10월 26일 ProductDetails Section1 스타일링 작업 완료 - ProductDetails의 애니메이션, 데이터 흐름을 고려한 효율적인 컴포넌트 사용 계획 완료 - 백엔드 데이터 구조에 맞는 RightSlider 기능 구현은 수요일까지 완료할 예정 - Section2, Section3 작업 시작 - 현재 ProductDeatils 애니메이션 기능 구현 작업 중

--- a/src/Pages/ProductDetails/ComponentYH/LeftSlider.scss
+++ b/src/Pages/ProductDetails/ComponentYH/LeftSlider.scss
@@ -5,13 +5,14 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        overflow: hidden;
         z-index: 10;
+        overflow: hidden;
         
         img{
             width: 100%;
             height: 100vh;
             object-fit: cover;
+            margin-bottom: 8vh;
         }
     }
 
@@ -34,6 +35,7 @@
             object-fit: cover;
             background-color: transparent;
             position: relative;
+            margin-bottom: 8vh;
 
             img {
                 top: -100px;
