--- a/src/Pages/LoginRegister/Components/Login.scss
+++ b/src/Pages/LoginRegister/Components/Login.scss
@@ -1,54 +1,6 @@
-$default-yellow: rgb(255, 232, 0);
-$default-blue: rgb(9, 127, 255);
-$default-green: rgb(38, 218, 79);
-$default-grey-background: rgb(247, 247, 247);
-$default-grey-text: rgb(204, 204, 204);
-$default-black: rgb(0, 0, 0);
-$default-white: rgb(255, 255, 255);
-$default-red: rgb(196, 41, 60);
+@import "../../../Styles/common.scss";
 
-$default-border: 2px solid rgb(0, 0, 0);
-$button-meta-font: 500 0.83vw "Work Sans";
-
-* {
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Work Sans", sans-serif;
-  outline: none;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  background-color: $default-white;
-}
-
-* {
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-}
-
-@mixin flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@mixin flex-spaceBetween-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin flex-spaceBetween-center {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@mixin flex-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.loginForm-BH {
+.Login-BH {
   position: relative;
   @include flex-column;
   padding: 2.1vw 4.2vw;
@@ -82,6 +34,17 @@ $button-meta-font: 500 0.83vw "Work Sans";
     color: $default-white;
     background-color: $default-black;
     line-height: 1.39vw;
+  }
+  .errorWrapper-BH {
+    padding: 0.4vw 0px 0.69vw;
+    .loginErrorMessage {
+      color: $default-red;
+      text-align: center;
+      line-height: 1.15;
+      font-weight: 400;
+      text-transform: none;
+      font-size: 0.95vw;
+    }
   }
   .loginHelp {
     padding: 0.69vw 0px 2.08vw;
