--- a/src/Pages/LoginRegister/Components/Register.scss
+++ b/src/Pages/LoginRegister/Components/Register.scss
@@ -1,54 +1,18 @@
-$default-yellow: rgb(255, 232, 0);
-$default-blue: rgb(9, 127, 255);
-$default-green: rgb(38, 218, 79);
-$default-grey-background: rgb(247, 247, 247);
-$default-grey-text: rgb(204, 204, 204);
-$default-black: rgb(0, 0, 0);
-$default-white: rgb(255, 255, 255);
+@import "../../../Styles/common.scss";
 
-$default-grey-meta: rgb(144, 144, 144);
-$default-border: 2px solid rgb(0, 0, 0);
-$button-meta-font: 500 0.83vw "Work Sans";
-
-* {
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Work Sans", sans-serif;
-  outline: none;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  background-color: $default-white;
+.errorWrapper-BH {
+  padding: 0.4vw 0.69vw 1vw;
+  .loginErrorMessage {
+    color: $default-red;
+    text-align: center;
+    line-height: 1.15;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 0.95vw;
+  }
 }
 
-* {
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-}
-
-@mixin flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@mixin flex-spaceBetween-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin flex-spaceBetween-center {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@mixin flex-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.registerForm-BH {
+.Register-BH {
   position: relative;
   @include flex-column;
   padding: 2.1vw 4.2vw;
@@ -101,14 +65,10 @@ $button-meta-font: 500 0.83vw "Work Sans";
     font: $button-meta-font;
     line-height: 1.39vw;
   }
-  .registerButtonActive {
-    height: 4.51vw;
-    margin-bottom: 1.2vw;
-    border: $default-border;
-    font: $button-meta-font;
+
+  .active {
     color: $default-white;
     background-color: $default-black;
-    line-height: 1.39vw;
   }
 
   .registerAccept {
@@ -121,12 +81,19 @@ $button-meta-font: 500 0.83vw "Work Sans";
       font-size: 0.69vw;
       line-height: 0.9vw;
       text-align: left;
-      input {
-      }
+
       span {
+        display: inline-block;
+        position: relative;
         padding-left: 0.4vw;
         padding-right: 0.2vw;
+        text-decoration: none;
+        transition: linear 0.4s;
       }
+    }
+
+    label:hover span {
+      text-decoration: underline;
     }
   }
 }
