--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -6,17 +6,23 @@ $default-grey-background: rgb(247, 247, 247);
 $default-grey-text: rgb(204, 204, 204);
 $default-black: rgb(0, 0, 0);
 $default-white: rgb(255, 255, 255);
+$default-grey-meta: rgb(144, 144, 144);
+$default-border: 2px solid rgb(0, 0, 0);
+$button-meta-font: 500 0.83vw "Work Sans";
 
-*{
+* {
     box-sizing: border-box;
     text-decoration: none;
-    font-family: ; 'Work Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     outline: none;
     padding: 0;
     margin: 0;
     border: 0;
     background-color: $default-white;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
   }
+
   @mixin flex-center {
     display: flex;
     justify-content: center;
@@ -32,4 +38,9 @@ $default-white: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  @mixin flex-column {
+    display: flex;
+    flex-direction: column;
   }
