--- a/src/Pages/ProductDetails/ComponentYH/RightSlider.scss
+++ b/src/Pages/ProductDetails/ComponentYH/RightSlider.scss
@@ -182,6 +182,10 @@ div.RightSlider {
                 text-align: center;
                 font-size: large;
                 cursor: pointer;
+                &:hover{
+                    background-color: black;
+                    color: rgb(255, 232, 0);
+                }
             }
         }
 
@@ -255,6 +259,7 @@ div.RightSlider {
                 height: 17.08vw;
                 position: relative;
                 margin-right: 1vw;
+                cursor: pointer;
 
                 a {
                     background-color: rgb(247, 247, 247);
@@ -311,6 +316,7 @@ div.RightSlider {
                 width : 13.43vw;
                 height: 17.08vw;
                 position: relative;
+                cursor: pointer;
 
                 a {
                     background-color: rgb(247, 247, 247);
