--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -4,7 +4,6 @@
   overflow: hidden;
 
   .slick-slider {
-
     ul {
       bottom: 8%;
       background: transparent;
@@ -20,6 +19,7 @@
     position: absolute;
     left: 44.5%;
     top: 100%;
+
     p {
       background: transparent;
       color: $default-yellow;
@@ -35,13 +35,14 @@
     position: absolute;
     right: 1%;
     top: 100%;
+
     div {
       display: block;
-      width: 1000%;
+      width: 200%;
       height: 30px;
       position: absolute;
       overflow: hidden;
-  
+
       animation: marquee 2s linear infinite;
 
       span {
@@ -50,7 +51,6 @@
         background: $default-yellow;
       }
     }
-  
   }
 
   @keyframes marquee {
@@ -64,19 +64,51 @@
 
   .Section2 {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     border: 1px solid black;
     font-size: 60px;
     font-weight: 800;
     text-align: center;
     padding-top: 2%;
+
+    .items {
+      position: relative;
+    }
+    .slick-slider {
+      margin-left: 50px;
+    }
+    .arrow {
+      background-color: transparent;
+      display: flex;
+      justify-content: space-between;
+      margin: 0 50px;
+    }
+
+    .arrowLeft,
+    .arrowRight {
+      position: absolute;
+      top: 20%;
+      background-color: transparent;
+      width: 10%;
+      height: 50%;
+    }
+
+    .arrowLeft {
+      left: 30px;
+    }
+
+    .arrowRight {
+      right: 30px;
+    }
   }
 
   .Section3 {
     display: flex;
+
     img {
       width: 50%;
     }
+
     div {
       border: 1px solid red;
       width: 50%;
@@ -86,6 +118,7 @@
       align-items: center;
       font-size: 60px;
       font-weight: 800;
+
       form {
         input,
         button {
