SearchBox Component 추가 구현 진행중

--- a/src/Pages/ProductList/Components/Menubar/Menubar.scss
+++ b/src/Pages/ProductList/Components/Menubar/Menubar.scss
@@ -51,7 +51,14 @@
       }
 
       &:hover::before {
-        width: 4vw;
+        width: 3.8vw;
+        height: 1px;
+      }
+    }
+
+    li.clicked {
+      &::before {
+        width: 3.8vw;
         height: 1px;
       }
     }
