--- a/src/Pages/Components/Cart.scss
+++ b/src/Pages/Components/Cart.scss
@@ -4,14 +4,18 @@
   &.visible {
     display: block;
     position: absolute;
+    top: 0;
     right: 0;
     z-index: 999;
   }
+  position: absolute;
   top: 0;
+  right: -650px;
   width: 100%;
   height: 100vh;
   background: transparent;
-  display: none;
+  z-index: -1;
+  transition: all 0.4s ease-out;
 
   .cartWrapper {
     width: 50%;
