--- a/src/Pages/Components/CartEmpty.scss
+++ b/src/Pages/Components/CartEmpty.scss
@@ -1,6 +1,4 @@
-@import "../../Styles/common.scss";
-
-.cartList {
+.cartEmpty {
   border-top: 5px solid $default-black;
   background: transparent;
   display: flex;
