--- a/src/Pages/Components/Cart.scss
+++ b/src/Pages/Components/Cart.scss
@@ -51,7 +51,7 @@
       }
     }
 
-    .cartEmpty {
+    .cartList {
       border-top: 5px solid $default-black;
       background: transparent;
       display: flex;
@@ -61,10 +61,17 @@
       height: 70%;
       margin: 0 50px;
 
-      p {
-        background: transparent;
-        font-size: 4rem;
-        font-weight: 1000;
+      ul {
+        li {
+          div {
+            display: flex;
+
+            img {
+              width: 20px;
+              height: 20px;
+            }
+          }
+        }
       }
     }
 
@@ -88,81 +95,3 @@
     }
   }
 }
-
-// .visible {
-//   width: 100%;
-//   height: 100vh;
-//   background: transparent;
-//   display: block;
-
-//   .cartWrapper {
-//     width: 50%;
-//     height: 100vh;
-//     position: absolute;
-//     right: 0;
-//     background: $default-yellow;
-
-//     .cartHeader {
-//       display: flex;
-//       justify-content: space-between;
-//       background: transparent;
-//       padding: 30px 50px;
-
-//       p {
-//         background: transparent;
-//         font-size: 1.5rem;
-//         font-weight: 1000;
-
-//         span {
-//           background: transparent;
-//         }
-//       }
-
-//       button {
-//         background: transparent;
-
-//         img {
-//           background: transparent;
-//           width: 20px;
-//           height: 20px;
-//         }
-//       }
-//     }
-
-//     .cartEmpty {
-//       border-top: 5px solid $default-black;
-//       background: transparent;
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: center;
-//       align-items: center;
-//       height: 70%;
-//       margin: 0 50px;
-
-//       p {
-//         background: transparent;
-//         font-size: 4rem;
-//         font-weight: 1000;
-//       }
-//     }
-
-//     .cartBtn {
-//       background: transparent;
-//       display: flex;
-//       justify-content: center;
-//       margin: 0 50px;
-
-//       button {
-//         height: 4.51vw;
-//         width: 100%;
-//         background: $default-black;
-//         color: $default-white;
-//         font-weight: 1000;
-
-//         &:hover {
-//           cursor: pointer;
-//         }
-//       }
-//     }
-//   }
-// }
